# ExternalSort

./: CMakeLists.txt  README.md  numbers.txt  settings.json
lib/: CMakeLists.txt  settings.cpp  settings.hpp  sorter.cpp  sorter.hpp  tape_device.cpp  tape_device.hpp  tape_file.cpp  tape_file.hpp  tape_splitter.cpp  tape_splitter.hpp
task/: CMakeLists.txt  file.cpp  file.hpp  io_device.cpp  io_device.hpp  main.cpp  settings.hpp  sorter.cpp  sorter.hpp  tape_device.cpp  tape_device.hpp  tape_file.cpp  tape_file.hpp  tape_splitter.cpp  tape_splitter.hpp
test/: CMakeLists.txt  algo.cpp  device.cpp  file.cpp  tape_file_test.hpp
